--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "cypress": "cypress open",
     "posttest": "ready",
-    "cypress:runDefault": "cypress run --spec cypress/e2e/WebSoft/Learning_testing_management/Learning_management/Admin_Create_Assing_e-course.check.cy.js",
-    "chrome-test": "cypress run --spec cypress/e2e/WebSoft/Learning_testing_management --browser chrome --headless",
-    "postchrome-test": "jrm ./results/combined-report.xml \"./results/results-*.xml\"",
-    "script-chrome": "npm run chrome-test || npm run postchrome-test"
+    "chrome-test": " npx cypress run --spec cypress/e2e/WebSoft/Learning_testing_management/** --browser chrome --env allure=true",
+    "report": "npx allure generate allure-results --clean -o allure-report"
+  
   },
   "keywords": [
     "cypress",
