--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "cypress": "cypress open",
     "posttest": "ready",
-    "chrome-test": " npx cypress run --spec cypress/e2e/WebSoft/Learning_testing_management/** --browser chrome --env allure=true",
-    "report": "npx allure generate allure-results --clean -o allure-report"
-  
+    
+    "chrome-test": " cypress run --spec cypress/e2e/WebSoft/Learning_testing_management/Learning_management/Portal_course_page.cy.js --browser chrome --headless",
+    "postchrome-test": "jrm ./results/combined-report.xml \"./results/results-*.xml\"",
+    "script-chrome": "npm run chrome-test || npm run postchrome-test"
+    
   },
   "keywords": [
     "cypress",
